<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        >
        <TextView
            android:id="@+id/tvNameApp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_favorite_fragment"
            android:textStyle="bold"
            android:textSize="@dimen/mainTitle"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginStart="@dimen/margin_default"
            android:drawablePadding="10dp"
            app:drawableEndCompat="@drawable/ic_favorite"
            app:drawableTint="@color/red" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFavoritesPokemos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/pokemon_item"
        tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        android:orientation="vertical"
        android:layout_below="@+id/topLinearLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        />

    <include
        android:id="@+id/include_logo"
        layout="@layout/progress_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/topLinearLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        />

    <TextView
        android:id="@+id/tvEmptyList"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_empty_list"
        android:textAlignment="center"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_centerInParent="true"
        android:drawablePadding="@dimen/paddingDrawableSecondary"
        app:drawableTopCompat="@drawable/ic_favorites" />

    <TextView
        android:id="@+id/tvError"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_error_pokemon_list"
        android:layout_centerInParent="true"
        android:gravity="center"
        app:drawableBottomCompat="@drawable/ic_error" />
</RelativeLayout>